--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,24 +33,6 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/server"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/edit_selector"
-            android:drawableLeft="@drawable/computer"
-            android:drawablePadding="5dp"
-            android:hint="@string/prompt_server"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:paddingLeft="5dp"
-            android:textSize="16sp"
-            android:text="192.168.1.104:5222"
-            />
-
-        <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,8 +46,8 @@
             android:maxLines="1"
             android:minHeight="48dp"
             android:paddingLeft="5dp"
-            android:textSize="16sp"
             android:text="tanxl"
+            android:textSize="16sp"
             />
 
         <EditText
@@ -82,8 +63,8 @@
             android:maxLines="1"
             android:minHeight="48dp"
             android:paddingLeft="5dp"
-            android:textSize="16sp"
             android:text="1234"
+            android:textSize="16sp"
             />
 
         <RelativeLayout
@@ -140,15 +121,17 @@
         android:layout_above="@id/login_pane"
         android:layout_centerHorizontal="true"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_setting"
-        app:borderWidth="0dp"
-        android:layout_alignParentRight="true"
+    <ImageButton
+        android:id="@+id/fab"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="24dp"/>
+        android:elevation="@dimen/z_fab"
+        android:background="@drawable/fab"
+        android:stateListAnimator="@animator/raise"
+        android:src="@drawable/ic_setting"/>
 
 </RelativeLayout>
