--- a/app/src/main/res/layout/activity_set_server.xml
+++ b/app/src/main/res/layout/activity_set_server.xml
@@ -1,95 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_set_server"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:onClick="dismiss"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.github.ggggxiaolong.xmpp.setting.SetServerActivity">
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:paddingLeft="16dp"
-        android:paddingTop="24dp"
-        android:paddingRight="24dp"
-        android:paddingBottom="16dp"
+        android:layout_marginLeft="@dimen/spacing_large"
+        android:layout_marginRight="@dimen/spacing_large"
+        android:background="@drawable/dialog_background"
         android:orientation="vertical"
-        android:background="@drawable/dialog_background">
+        android:paddingBottom="@dimen/padding_normal"
+        android:paddingLeft="@dimen/padding_normal"
+        android:paddingRight="@dimen/padding_dialog"
+        android:paddingTop="@dimen/padding_dialog"
+        android:transitionName="@string/transition_server_setting">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Set Server"
+            android:text="@string/prompt_set_server"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/username_float_label"
+            android:id="@+id/name_float_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ServerName"
-                android:inputType="textEmailAddress"
-                android:textColorHighlight="@color/designer_news_link_highlight"
-                android:selectAllOnFocus="true" />
+                android:hint="@string/prompt_server_name"
+                android:inputType="text"
+                android:selectAllOnFocus="true"
+                android:textColorHighlight="@color/designer_news_link_highlight"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/address_float_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ServerAddress"
-                android:inputType="textEmailAddress"
-                android:textColorHighlight="@color/designer_news_link_highlight"
-                android:selectAllOnFocus="true" />
+                android:hint="@string/prompt_server_address"
+                android:inputType="text"
+                android:selectAllOnFocus="true"
+                android:textColorHighlight="@color/designer_news_link_highlight"/>
 
         </android.support.design.widget.TextInputLayout>
+
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/port_float_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/port"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ServerPort"
-                android:inputType="textEmailAddress"
-                android:textColorHighlight="@color/designer_news_link_highlight"
-                android:selectAllOnFocus="true" />
+                android:hint="@string/prompt_server_port"
+                android:inputType="number"
+                android:selectAllOnFocus="true"
+                android:textColorHighlight="@color/designer_news_link_highlight"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <FrameLayout
-            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
+
             <Button
+                android:id="@+id/cancel"
+                style="?android:borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancle"
-                android:textSize="16sp"
+                android:text="@string/action_cancle"
                 android:textColor="@color/designer_news"
-                style="?android:borderlessButtonStyle"/>
+                android:textSize="16sp"/>
+
             <Button
+                android:id="@+id/confirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SURE"
-                android:textSize="16sp"
                 android:layout_gravity="end"
-                android:textAppearance="@style/TextAppearance.DarkButton"/>
+                android:text="@string/action_confirm"
+                android:enabled="false"
+                android:textAppearance="@style/TextAppearance.DarkButton"
+                android:textSize="16sp"/>
         </FrameLayout>
     </LinearLayout>
 
