添加通用的东西

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,4 +56,5 @@
     <color name="designer_news_super_dark">#000133</color>
     <color name="designer_news_quote_line">#ffeceef1</color>
     <color name="designer_news_quote">#73000000</color>
+    <color name="tab_select">#11cd6e</color>
 </resources>
